# gestao-de-tarefas

./: .dockerignore  .flake8  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: app.py
src/api/: __init__.py  exceptions  exceptions.py  schemas.py
src/api/config/: settings.py
src/api/controllers/: tasks_controller.py
src/api/dtos/: task_dto.py
src/api/mappers/: task_mapper.py
src/api/models/: task.py
src/api/repositories/: __init__.py  memory_repository.py
src/api/services/: task_service.py
src/clients/dotnet/: DotnetClient.csproj  Programs.cs
src/clients/dotnet/Models/: TaskDto.cs
src/clients/dotnet/Services/: TaskService.cs
src/tests/: conftest.py
src/tests/unit/controllers/: test_tasks_controller.py
src/tests/unit/services/: test_task_service.py
