[tool]
name = "todo-microservice-python"
version = "0.1.0"
description = "A simple Task Management (To-Do List) REST API built with Python."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0"
pydantic = "^1.8"
pytest = "^6.2"
pytest-mock = "^3.6"
requests = "^2.25"

[tool.poetry.dev-dependencies]
flake8 = "^3.9"
black = "^21.7b0"

[tool.poetry.scripts]
run = "src.app:main"